--- a/SPMS/Areas/Students/Views/Dashboard/Profile.cshtml
+++ b/SPMS/Areas/Students/Views/Dashboard/Profile.cshtml
@@ -2,14 +2,16 @@
 	ViewData["Title"] = "Profile";
 	var student = ViewData["student"] as Student;
 	ForgotPasswordVM fpass = new ForgotPasswordVM();
+
 }
-@*<head>
+<head>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/4.0.0/jquery.validate.unobtrusive.js"></script>
-</head>*@
+</head>
 
 <Partial name="_ProfileHeader" />
+
 <Partial name="_Sidebar" />
 
  <div class="content-body">
