--- a/SPMS/Areas/Supervisors/Views/Shared/_Layout.cshtml
+++ b/SPMS/Areas/Supervisors/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 	<title>Capstone Project Management</title>
 
 	<!-- FAVICONS ICON -->
-	<link rel="shortcut icon" type="image/png" href="~/assets/images/favicon.png" />
+	<link rel="shortcut icon" type="image/png" href="~/assets/images/favico.png" />
 	<link href="~/assets/vendor/jquery-nice-select/css/nice-select.css" rel="stylesheet">
 	<link href="~/assets/vendor/owl-carousel/owl.carousel.css" rel="stylesheet">
 
