--- a/SPMS/Views/Shared/_Footer.cshtml
+++ b/SPMS/Views/Shared/_Footer.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="footer">
     <div class="copyright">
-        <p>Copyright © Designed &amp; Developed by <a href="#" target="_blank">DexignLab</a> @DateTime.Now.Year</p>
+        <p>Copyright © @*Designed &amp; Developed by <a href="#" target="_blank">DexignLab</a>*@ @DateTime.Now.Year</p>
     </div>
 </div>
