--- a/SPMS/Views/Shared/_PagesLayout.cshtml
+++ b/SPMS/Views/Shared/_PagesLayout.cshtml
@@ -18,7 +18,7 @@
     <title>Capstone Project Management</title>
 
     <!-- FAVICONS ICON -->
-    <link rel="shortcut icon" type="image/png" href="~/assets/images/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="~/assets/images/favico.png" />
     <link href="~/assets/css/style.css" rel="stylesheet">
 
 </head>
