Admin CRUD departments

--- a/SPMS/Views/Shared/_Sidebar.cshtml
+++ b/SPMS/Views/Shared/_Sidebar.cshtml
@@ -23,9 +23,8 @@
 						<span class="nav-text">Manage</span>
 					</a>
 					<ul aria-expanded="false">
-						<li><a asp-controller="Project" asp-action="Index">Department</a></li>
-
-
+						<li><a asp-controller="Dashboard" asp-action="Department">Department</a></li>
+						<li><a asp-controller="Dashboard" asp-action="AddDepartment">Supervisors</a></li>
 						<li>
 							<ul aria-expanded="false">
 							</ul>
