--- a/SPMS/Areas/Students/Views/Dashboard/Index.cshtml
+++ b/SPMS/Areas/Students/Views/Dashboard/Index.cshtml
@@ -6,4 +6,33 @@
 <Partial name="_DashboardHeader" />
 <Partial name="_Sidebar" />
 
+<head>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script>
+		$(document).ready(function () {
+			$("#myModal").modal('show');
+		});
+	</script>
+</head>
 
+@if (CurrentUser.Surname == null)
+{	
+
+<div id="myModal" class="modal fade">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">Notice</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+
+			</div>
+			<div class="modal-body">
+				<p>Update your profile to get started with your project</p>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-danger light" data-bs-dismiss="modal">Close</button>
+			</div>
+		</div>
+	</div>
+</div>
+}
