--- a/SPMS/Areas/Students/Views/Project/Details.cshtml
+++ b/SPMS/Areas/Students/Views/Project/Details.cshtml
@@ -23,9 +23,9 @@
 									<div class="row border-bottom pb-5">
 										<div class="col-xl-8 col-lg-9">
 											<div>
-												<h4 class="fs-32 font-w700">Student Project Profile Website Development</h4>
 											@if (prjt != null)
 											{
+												<h4 class="fs-32 font-w700">@prjt.Topic</h4>
 												<span class="mb-2 d-block">Created by @prjt.Student.FullName on</span>
 											}
 											<div class="workload-button">
