--- a/SPMS/Areas/Students/Views/Project/Milestone.cshtml
+++ b/SPMS/Areas/Students/Views/Project/Milestone.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
 	ViewData["Title"] = "Milestone";
-	var proposal = ViewData["projectproposal"] as IEnumerable<Project>;
-	Project pjt = new Project();
-
+	var prjts = ViewData["projects"] as IEnumerable<Project>;
+	var chapters = ViewData["chapters"] as IEnumerable<Chapter>;
+	Chapter chap = new Chapter();
 }
 
 
@@ -24,7 +24,7 @@
 				<div class="card">
 					<div class="card-header">
 						<h4 class="card-title">Project Topic</h4>
-						@if(proposal.Any(c => c.Status.Equals("Approved")))
+						@if (prjts.Any(c => c.Status.Equals("Approved")))
 						{
 							<button type="button" class="btn btn-primary mb-2" data-bs-toggle="modal" data-bs-target="#basicModal">Add Chapter</button>
 						}
@@ -47,12 +47,12 @@
 									</tr>
 								</thead>
 								<tbody>
-									@foreach (var item in @proposal)
+									@foreach (var item in chapters)
 									{
 										<tr>
 
 											<td>@item.Matric</td>
-											<td>@item.Chapter</td>
+											<td>@item.ChapterName.</td>
 											<td><a href="@item.FileUrl" download>Dowload File</a></td>
 											@if (@item.Status.Equals("Approved"))
 											{
@@ -67,8 +67,8 @@
 												<td><div class="d-flex align-items-center"><i class="fa fa-circle text-warning me-1"></i>  @item.Status</div></td>
 											}
 											<td>
-												<a href="" data-bs-toggle="modal" data-bs-target="#remarkModal_@item.ProjectId"> View Remark </a>
-												<div class="modal fade" id="remarkModal_@item.ProjectId">
+												<a href="" data-bs-toggle="modal" data-bs-target="#remarkModal_@item.ChapterId"> View Remark </a>
+												<div class="modal fade" id="remarkModal_@item.ChapterId">
 													<div class="modal-dialog modal-dialog-centered" role="document">
 														<div class="modal-content">
 															<div class="modal-header">
@@ -89,38 +89,40 @@
 											</td>
 											<td>
 												<div class="d-flex">
-													<a data-bs-toggle="modal" data-bs-target="#basicModal_@item.ProjectId" class="btn btn-primary shadow btn-xs sharp me-1"><i class="fas fa-pencil-alt"></i></a>
-													<div class="modal fade" id="basicModal_@item.ProjectId">
+													<a data-bs-toggle="modal" data-bs-target="#basicModal_@item.ChapterId" class="btn btn-primary shadow btn-xs sharp me-1"><i class="fas fa-pencil-alt"></i></a>
+													<div class="modal fade" id="basicModal_@item.ChapterId">
 														<div class="modal-dialog" role="document">
 															<div class="modal-content">
 																<div class="modal-header">
-																	<h5 class="modal-title">Add Project Topic</h5>
+																	<h5 class="modal-title">Edit Project Chapter</h5>
 																	<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
 																</div>
 																<div class="modal-body">
-																	<form asp-action="AddProject" method="post" enctype="multipart/form-data">
-																		<input asp-for="@pjt.Matric" name="Matric" value="@CurrentUser.UserName" type="hidden" class="form-control">
-																		<input asp-for="@pjt.Status" name="Status" value="Pending" type="hidden" class="form-control">
-																		<input asp-for="@pjt.ProjectId" name="ProjectId" value="@item.ProjectId" type="hidden" class="form-control">
+																	<form asp-action="AddEditProject" method="post" enctype="multipart/form-data">
+																		<input asp-for="@chap.Status" name="Status" value="Approved" type="hidden" class="form-control">
+																		<input asp-for="@chap.ChapterId" name="ChapterId" value="@item.ChapterId" type="hidden" class="form-control">
+																		<input asp-for="@chap.ProjectId" name="ProjectId" value="@item.ProjectId" type="hidden" class="form-control">
+
 
 
 																		<div class="row">
 																			<div class="col-lg-12">
 																				<div class="mb-3">
-																					<label class="text-black font-w600 form-label">Project Topic <span class="required">*</span></label>
-																					<textarea asp-for="@pjt.Topic" name="Topic" type="text" class="form-control" rows="4" id="comment" required></textarea>
+																					<label class="text-black font-w600 form-label">Project Chapter <span class="required">*</span></label>
+																					<select asp-for="@chap.ChapterName" name="ChapterName" asp-items="Html.GetEnumSelectList<ChapterName>()" class="form-control default-select wide" required>
+																						<option selected="selected" value="@chap.ChapterName"> @chap.ChapterName  </option>
+																					</select>
 																				</div>
 																			</div>
 																			<div class="col-lg-12">
 																				<div class="mb-3">
-																					<label class="text-black font-w600 form-label">Upload Proposal <span class="required">*</span></label>
-																					<input asp-for="@pjt.File" name="File" type="file" accept=".txt, .doc,.docs,.pdf" placeholder="Topic" required class="form-file-input form-control">
-
+																					<label class="text-black font-w600 form-label">Upload Chaper File <span class="required">*</span></label>
+																					<input asp-for="@chap.File" name="File" type="file" accept=".txt, .doc,.docs,.pdf" placeholder="Upload file for @item.ChapterName" required class="form-file-input form-control">
 																				</div>
 																			</div>
 																			<div class="modal-footer">
 																				<button type="button" class="btn btn-danger light" data-bs-dismiss="modal">Close</button>
-																				<button type="submit" class="btn btn-primary">Add</button>
+																				<button type="submit" class="btn btn-primary">Submit</button>
 																			</div>
 																		</div>
 																	</form>
@@ -129,7 +131,7 @@
 														</div>
 													</div>
 
-													<a asp-action="Delete" asp-route-id="@item.ProjectId" class="btn btn-danger shadow btn-xs sharp"><i class="fa fa-trash"></i></a>
+													<a asp-action="Delete" asp-route-id="@item.ChapterId" class="btn btn-danger shadow btn-xs sharp"><i class="fa fa-trash"></i></a>
 												</div>
 											</td>
 
@@ -158,21 +160,23 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
 			</div>
 			<div class="modal-body">
-				<form asp-action="AddProject" method="post" enctype="multipart/form-data">
-					<input asp-for="@pjt.Matric" name="Matric" value="@CurrentUser.UserName" type="hidden" class="form-control">
-					<input asp-for="@pjt.Status" name="Status" value="Pending" type="hidden" class="form-control">
+				<form asp-action="AddEditChapter" method="post" enctype="multipart/form-data">
+					<input asp-for="@chap.Status" name="Status" value="Approved" type="hidden" class="form-control">
+					<input asp-for="@chap.Matric" name="Matric" value="@CurrentUser.UserName" type="hidden" class="form-control">
 
 					<div class="row">
 						<div class="col-lg-12">
 							<div class="mb-3">
-								<label class="text-black font-w600 form-label">Project Topic <span class="required">*</span></label>
-								<textarea asp-for="@pjt.Topic" name="Topic" type="text" class="form-control" rows="4" id="comment" required></textarea>
+								<label class="text-black font-w600 form-label">Project Chapter <span class="required">*</span></label>
+								<select asp-for="@chap.ChapterName" name="Chapter" asp-items="Html.GetEnumSelectList<ChapterName>()" class="form-control default-select wide" required>
+									<option selected="selected" value="@chap.ChapterName">  </option>
+								</select>
 							</div>
 						</div>
 						<div class="col-lg-12">
 							<div class="mb-3">
 								<label class="text-black font-w600 form-label">Upload File <span class="required">*</span></label>
-								<input asp-for="@pjt.File" name="File" type="file" accept=".txt, .docx, .doc, .docs,.pdf" required class="form-file-input form-control">
+								<input asp-for="@chap.File" name="File" type="file" accept=".txt, .docx, .doc, .docs,.pdf" required class="form-file-input form-control">
 
 							</div>
 						</div>
