--- a/SPMS/Views/Account/Login.cshtml
+++ b/SPMS/Views/Account/Login.cshtml
@@ -46,7 +46,7 @@
 										</div>
 									</form>
 									<div class="new-account mt-3">
-										<p>Don't have an account? <a class="text-primary" href="./page-register.html">Sign up</a></p>
+										@*<p>Don't have an account? <a class="text-primary" href="./page-register.html">Sign up</a></p>*@
 									</div>
 								</div>
 							</div>
