--- a/SPMS/Views/Account/ForgotPassConfirm.cshtml
+++ b/SPMS/Views/Account/ForgotPassConfirm.cshtml
@@ -12,7 +12,7 @@
 			<div class="col-md-5">
 				<div class="form-input-content text-center error-page">
 					<h1 class="error-text  fw-bold"></h1>
-					<h4><i class="fa fa-times-circle text-info"></i> Password Reset!</h4>
+					<h4><i class="fa fa-info-circle text-info"></i> Password Reset!</h4>
 					<p>A password reset link has been sent to your email.</p>
 					<div>
 						<a class="btn btn-primary" asp-controller="Account" asp-action="Login">Back to Home</a>
