--- a/SPMS/Views/Account/Login.cshtml
+++ b/SPMS/Views/Account/Login.cshtml
@@ -38,7 +38,7 @@
 												</div>
 											</div>
 											<div class="mb-3">
-												<a asp-action="ForgotPassword">Forgot Password?</a>
+												<a asp-controller="account" asp-action="forgotpass">Forgot Password?</a>
 											</div>
 										</div>
 										<div class="text-center">
