--- a/SPMS/Views/Account/ResetPassConfirm.cshtml
+++ b/SPMS/Views/Account/ResetPassConfirm.cshtml
@@ -10,7 +10,7 @@
 			<div class="col-md-5">
 				<div class="form-input-content text-center error-page">
 					<h1 class="error-text  fw-bold"></h1>
-					<h4><i class="fa fa-times-circle text-info"></i> Password Reset!</h4>
+					<h4><i class="fa fa-info-circle text-info"></i> Password Reset!</h4>
 					<p>Your password has been reset, please <a asp-action="Login"> Login Here.</a></p>
 				</div>
 			</div>
