--- a/SPMS/Views/Shared/_Layout.cshtml
+++ b/SPMS/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 		<Partial name="_Header"/>
 
 		@RenderBody()
-
+		<partial name="_CookieConsentPartial" />
 		<Partial name="_Footer"/>
 	</div>
 
