--- a/SPMS/Areas/Students/Views/Project/Milestone.cshtml
+++ b/SPMS/Areas/Students/Views/Project/Milestone.cshtml
@@ -99,7 +99,7 @@
 																</div>
 																<div class="modal-body">
 																	<form asp-action="AddEditProject" method="post" enctype="multipart/form-data">
-																		<input asp-for="@chap.Status" name="Status" value="Approved" type="hidden" class="form-control">
+																		<input asp-for="@chap.Status" name="Status" value="Pending" type="hidden" class="form-control">
 																		<input asp-for="@chap.ChapterId" name="ChapterId" value="@item.ChapterId" type="hidden" class="form-control">
 																		<input asp-for="@chap.ProjectId" name="ProjectId" value="@item.ProjectId" type="hidden" class="form-control">
 
