--- a/SPMS/Views/Shared/_NoticePartial.cshtml
+++ b/SPMS/Views/Shared/_NoticePartial.cshtml
@@ -13,20 +13,21 @@
 	<div id="myModal" class="modal fade">
 		<div class="modal-dialog">
 			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title text-center">Notice ! </h5>
+				<div class="modal-header text-center"> 
+					<h5 class="modal-title">Notice ! &nbsp;Notice ! &nbsp;</h5>
 					<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
 
 				</div>
 				<div class="modal-body">
-					<p> <b> Hello @CurrentUser.Surname, Kindly Compelete below to get started with your project. Goodluck ! 💪💪 </b></p>
+					<p> <b> Hello @CurrentUser.Surname 🤠, Kindly Compelete below to get started with your project. Goodluck ! 💪💪 </b></p>
 
-					<ol type="i">
-						<li>Go to your profile</li>
-						<li>Update your profile email &Aacute; phone no</li>
-						<li>Select your project Supervisor</li>
-						<li>Submit. Then proceed to submit your project proposal</li>
+					<ol>
+						<li><b>*</b> Go to your profile</li>
+						<li><b>*</b> Update your profile email & phone no</li>
+						<li><b>*</b> Select your project Supervisor</li>
+						<li><b>*</b> Submit Update</li>
 					</ol>
+					<p>Then proceed to submit your project proposal</p>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-danger light" data-bs-dismiss="modal">Close</button>
