--- a/SPMS/Areas/Students/Views/Project/Details.cshtml
+++ b/SPMS/Areas/Students/Views/Project/Details.cshtml
@@ -1,9 +1,11 @@
-﻿@{
+﻿@using Domain.Interfaces
+@inject IFileHelper _file;
+
+@{
 	ViewData["Title"] = "Project Details";
-	var prjt= ViewData["project"] as Project;
+	var prjt = ViewData["project"] as Project;
 
 }
-
 
 <Partial name="_ProjectDetailsHeader" />
 <Partial name="_Sidebar" />
@@ -17,81 +19,76 @@
 					<div class="col-xl-12">
 						<div class="card overflow-hidden">
 							<div class="company-profile">
-								<img src="~/assets/images/back1.jpg" alt="">
-							</div>							
-								<div class="card-body">
-									<div class="row border-bottom pb-5">
-										<div class="col-xl-8 col-lg-9">
-											<div>
+								<img src="~/assets/images/back1.jpg" style="opacity: 0.25;" sty alt="">
+							</div>
+							<div class="card-body">
+								<div class="row border-bottom pb-5">
+									<div class="col-xl-8 col-lg-9">
+										<div>
 											@if (prjt != null)
 											{
 												<h4 class="fs-32 font-w700">@prjt.Topic</h4>
-												<span class="mb-2 d-block">Created by @prjt.Student.FullName on</span>
+												<span class="mb-2 d-block">Created by @prjt.Student.FullName </span>
 											}
 											<div class="workload-button">
-													<a href="javascript:void(0);" class="btn btn-primary btn-rounded">New<i class="fas fa-caret-down ms-2 scale5"></i></a>
-												</div>
-											</div>
-										</div>
-										<div class="col-xl-4 col-lg-3 info">
-											<div class="kanbanimg1">
-												<span><i class="fas fa-info-circle me-3"></i>Project Details</span>
-												<div class="dropdown ms-3">
-													<div class="btn-link" data-bs-toggle="dropdown">
-														<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-															<circle cx="12.4999" cy="3.5" r="2.5" fill="#A5A5A5" />
-															<circle cx="12.4999" cy="11.5" r="2.5" fill="#A5A5A5" />
-															<circle cx="12.4999" cy="19.5" r="2.5" fill="#A5A5A5" />
-														</svg>
-													</div>
-													<div class="dropdown-menu dropdown-menu-right">
-														<a class="dropdown-item" href="javascript:void(0)">Delete</a>
-														<a class="dropdown-item" href="javascript:void(0)">Edit</a>
-													</div>
-												</div>
-											</div>
-										
-										</div>
-										<div class="col-xl-3 mt-4 col-sm-6">
-											<div class="d-flex">
-												<span><i class="far fa-clock scale5 text-primary mt-2 me-3"></i></span>
-												<div>
-													<h4 class="fs-18 font-w500 text-black">Project Create</h4>
-													@if (prjt != null)
-													{
-														<span> @prjt.DateSubmitted.ToShortTimeString()</span>
-													}
-												</div>
-											</div>
-										</div>
-										<div class="col-xl-3 mt-4 col-sm-6">
-											<div class="d-flex">
-												<span><i class="far fa-clock scale5 text-primary mt-2 me-3"></i></span>
-												<div>
-													<h4 class="fs-18 font-w500 text-black">Due date</h4>
-													@if (prjt != null)
-													{
-														<span> @prjt.DateSubmitted.AddMonths(5).ToShortTimeString()</span>
-													}
-												</div>
+												
 											</div>
 										</div>
 									</div>
-									<div class="project-description">
-										<span class="fs-18 font-w500 mb-3 d-block">PROJECT ABSTRACT</span>
-										<p class="fs-18 font-w500">
-											"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-									
+									<div class="col-xl-4 col-lg-3 info">
+										<div class="kanbanimg1">
+											<span><i class="fas fa-info-circle me-3"></i>Project Details</span>
+											<div class="dropdown ms-3">
+												<div class="btn-link" data-bs-toggle="dropdown">
+													<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+														<circle cx="12.4999" cy="3.5" r="2.5" fill="#A5A5A5" />
+														<circle cx="12.4999" cy="11.5" r="2.5" fill="#A5A5A5" />
+														<circle cx="12.4999" cy="19.5" r="2.5" fill="#A5A5A5" />
+													</svg>
+												</div>
+												<div class="dropdown-menu dropdown-menu-right">
+													<a class="dropdown-item" href="javascript:void(0)">Delete</a>
+													<a class="dropdown-item" href="javascript:void(0)">Edit</a>
+												</div>
+											</div>
+										</div>
+
 									</div>
-									<div class="message1">
-										<textarea class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Type comment here..."></textarea>
-										<div class="msg-button">
-											<i class="fas fa-smile me-3 "></i>
-											<i class="fas fa-paperclip me-3"></i>
-											<a href="javascript:void(0);" class="btn btn-primary"><i class="fas fa-paper-plane me-2 text-white fs-18 btn-rounded"></i>SEND</a>
+									<div class="col-xl-3 mt-4 col-sm-6">
+										<div class="d-flex">
+											<span><i class="far fa-clock scale5 text-primary mt-2 me-3"></i></span>
+											<div>
+												<h4 class="fs-18 font-w500 text-black">Project Started on</h4>
+												@if (prjt != null)
+												{
+													<span> @prjt.DateSubmitted.ToLongDateString()</span>
+												}
+											</div>
+										</div>
+									</div>
+									<div class="col-xl-3 mt-4 col-sm-6">
+										<div class="d-flex">
+											<span><i class="far fa-clock scale5 text-primary mt-2 me-3"></i></span>
+											<div>
+												<h4 class="fs-18 font-w500 text-black">Due date</h4>
+												@if (prjt != null)
+												{
+													<span> @prjt.DateSubmitted.AddMonths(5).ToLongDateString()</span>
+												}
+											</div>
 										</div>
 									</div>
 								</div>
+								<div class="project-description">
+									<span class="fs-18 font-w500 mb-3 d-block">PROJECT ABSTRACT</span>
+									<p class="fs-18 font-w500">
+										<iframe seamless class="w-100" height="650" src="@prjt.FileUrl">
+											<sspan>Your browser does not support iframes.</sspan>
+										</iframe>
+									</p>
+
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -100,3 +97,6 @@
 		</div>
 	</div>
 </div>
+
+
+
