--- a/SPMS/Areas/supervisors/Views/Project/Details.cshtml
+++ b/SPMS/Areas/supervisors/Views/Project/Details.cshtml
@@ -4,7 +4,7 @@
 @{
 	ViewData["Title"] = "Project Details";
 	var prjt = ViewData["project"] as Project;
-
+	Project project = new Project();
 }
 
 <Partial name="_ProjectDetailsHeader" />
@@ -82,34 +82,20 @@
 								<div class="project-description">
 									<span class="fs-18 font-w500 mb-3 d-block">PROJECT ABSTRACT</span>
 									<p class="fs-18 font-w500">
-										@*<embed id="" src="@prjt.FileUrl" type="application/pdf" width="100%" height="100%" aria-labelledby="PDF document"l/>*@
-										@*@_file.ReadFile(@prjt.FileUrl)*@
-										<object data='https://@prjt.FileUrl#toolbar=0'
-												type="application/pdf"
-												width="100%"
-												height="678">
-
-											<iframe src="@prjt.FileUrl)"
-													width="100%"
-													height="678">
-												<p>This browser does not support PDF!</p>
-											</iframe>
-										</object>
+										<iframe seamless class="w-100" height="650" src="@prjt.FileUrl">
+											<sspan>Your browser does not support iframes.</sspan>
+										</iframe>
 									</p>
 
 								</div>
-								<form asp-action="status" method="post">
+								<form asp-controller="project" asp-action="status" method="post">
 									<div class="message1">
-										<textarea class="form-control" id="rTextarea" oninput="myFunction()" name="Remark" rows="4" placeholder="Type comment here..."></textarea>
+										<textarea class="form-control" id="rTextarea" asp-for="@project.Remark" name="Remark" rows="4" placeholder="Type comment here..."></textarea>
 										<div class="msg-button">
 											<i class="fas fa-smile me-3 "></i>
 											<i class="fas fa-paperclip me-3"></i>
 
-											<button type="submit" asp-route-ProjectId="@prjt.ProjectId" class="btn btn-primary"><i class="fas fa-paper-plane me-2 text-white fs-18 btn-rounded">Approve</i></button>
-											<button type="submit" asp-route-ProjectId="@prjt.ProjectId" class="btn btn-primary"><i class="fas fa-paper-plane me-2 text-white fs-18 btn-rounded">Reject</i></button>
-
-											@*<a  asp-route-remark="@prjt.Remark" Approve</a> &nbsp;&nbsp;
-											<a asp-action="Status" asp-route-ProjectId="@prjt.ProjectId" asp-route-item="Rejected" asp-route-remark="document.getElementById("#rTextarea").value" class="btn-primary"><i class="fas fa-paper-plane me-2 text-white fs-18 btn-rounded"></i>Reject</a>*@
+											@*<button type="submit" asp-route-ProjectId="@prjt.ProjectId"  asp-route-item="Approved" class="btn btn-primary">Approve</button>*@
 										</div>
 									</div>
 								</form>
@@ -123,5 +109,3 @@
 		</div>
 	</div>
 </div>
-
-
