--- a/SPMS/Views/Shared/_MilestoneHeader.cshtml
+++ b/SPMS/Views/Shared/_MilestoneHeader.cshtml
@@ -48,7 +48,7 @@
 									}
 								</ul>
 							</div>
-							<a class="all-notification" href="javascript:void(0);">See all notifications <i class="ti-arrow-end"></i></a>
+							<a class="all-notification" asp-action="notify">See all notifications <i class="ti-arrow-end"></i></a>
 						</div>
 					</li>
 					<li class="nav-item dropdown notification_dropdown">
@@ -70,11 +70,11 @@
 							</div>
 						</a>
 						<div class="dropdown-menu dropdown-menu-end">
-							<a asp-controller="Dashboard" asp-action="Profile" class="dropdown-item ai-icon">
+							<a asp-controller="dashboard" asp-action="profile" class="dropdown-item ai-icon">
 								<svg id="icon-user1" xmlns="http://www.w3.org/2000/svg" class="text-primary" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
 								<span class="ms-2">Profile </span>
 							</a>
-							<a asp-area="" asp-controller="Account" asp-action="Logout" class="dropdown-item ai-icon">
+							<a asp-area="" asp-controller="account" asp-action="logout" class="dropdown-item ai-icon">
 								<svg id="icon-logout" xmlns="http://www.w3.org/2000/svg" class="text-danger" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path><polyline points="16 17 21 12 16 7"></polyline><line x1="21" y1="12" x2="9" y2="12"></line></svg>
 								<span class="ms-2">Logout </span>
 							</a>
