--- a/SPMS/Views/Shared/_PProposalHeader.cshtml
+++ b/SPMS/Views/Shared/_PProposalHeader.cshtml
@@ -36,10 +36,10 @@
 											<li>
 												<div class="timeline-panel">
 													<div class="media me-2">
-														<img alt="image" width="50" src="~/assets/images/avatar/8.jpg">
+														<img alt="image" width="50" src="~/assets/images/avatar/8.png">
 													</div>
 													<div class="media-body">
-														<h6 class="mb-1">@item.Content</h6>
+														<h6 class="mb-1">@item.Content.Substring(0,20)...</h6>
 														<small class="d-block">@item.When.ToLongDateString() - @item.When.ToShortTimeString()</small>
 													</div>
 												</div>
@@ -47,7 +47,7 @@
 										}
 									</ul>
 								</div>
-								<a class="all-notification" href="javascript:void(0);">See all notifications <i class="ti-arrow-end"></i></a>
+								<a class="all-notification" asp-action="notify">See all notifications <i class="ti-arrow-end"></i></a>
 							</div>
 						</li>
 						<li class="nav-item dropdown notification_dropdown">
@@ -85,11 +85,11 @@
 								</div>
 							</a>
 							<div class="dropdown-menu dropdown-menu-end">
-								<a asp-controller="Dashboard" asp-action="Profile" class="dropdown-item ai-icon">
+								<a asp-controller="dashboard" asp-action="profile" class="dropdown-item ai-icon">
 									<svg id="icon-user1" xmlns="http://www.w3.org/2000/svg" class="text-primary" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
 									<span class="ms-2">Profile </span>
 								</a>
-								<a asp-area="" asp-controller="Account" asp-action="Logout" class="dropdown-item ai-icon">
+								<a asp-area="" asp-controller="account" asp-action="logout" class="dropdown-item ai-icon">
 									<svg id="icon-logout" xmlns="http://www.w3.org/2000/svg" class="text-danger" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path><polyline points="16 17 21 12 16 7"></polyline><line x1="21" y1="12" x2="9" y2="12"></line></svg>
 									<span class="ms-2">Logout </span>
 								</a>
@@ -135,7 +135,7 @@
 										<li>
 											<div class="timeline-panel">
 												<div class="media me-2">
-													<img alt="image" width="50" src="~/assets/images/avatar/8.jpg">
+													<img alt="image" width="50" src="~/assets/images/avatar/8.png">
 												</div>
 												<div class="media-body">
 													<h6 class="mb-1">...</h6>
@@ -145,7 +145,7 @@
 										</li>
 									</ul>
 								</div>
-								<a class="all-notification" asp-action="Details">See all notifications <i class="ti-arrow-end"></i></a>
+								<a class="all-notification" asp-action="details">See all notifications <i class="ti-arrow-end"></i></a>
 							</div>
 
 						</li>
@@ -169,11 +169,11 @@
 								</div>
 							</a>
 							<div class="dropdown-menu dropdown-menu-end">
-								<a asp-controller="Dashboard" asp-action="Profile" class="dropdown-item ai-icon">
+								<a asp-controller="dashboard" asp-action="profile" class="dropdown-item ai-icon">
 									<svg id="icon-user1" xmlns="http://www.w3.org/2000/svg" class="text-primary" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
 									<span class="ms-2">Profile </span>
 								</a>
-								<a asp-area="" asp-controller="Account" asp-action="Logout" class="dropdown-item ai-icon">
+								<a asp-area="" asp-controller="account" asp-action="logout" class="dropdown-item ai-icon">
 									<svg id="icon-logout" xmlns="http://www.w3.org/2000/svg" class="text-danger" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path><polyline points="16 17 21 12 16 7"></polyline><line x1="21" y1="12" x2="9" y2="12"></line></svg>
 									<span class="ms-2">Logout </span>
 								</a>
